Merged fix for DEV-724: BootJarTool can leave content that was previously listed in the config, but since removed
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@3641 7fc7bbf3-cf45-46d4-be06-341739edd864